# pi-Bot

./: .dccache  .env.example  .gitattributes  .gitignore  .gitignore.save  CHANGELOG.md  Dockerfile  README.md  bot_state.py  card_config.json  card_states.json  deploy-commands.js  index.js  main.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: ci.yml  deploy.yml  sync-dev.yml
adventureDB/Kaia/: Storyloading.json
cogs/: card_draw.py  card_draws.py  dice_rolls.py
commands/: adventure.js  battle.js  bite.js  blush.js  bully.js  kick.js  kill.js  pi.js  ping.js  roll.js  say.js  user.js
docs/: rebuild.md  runbook.md
etc/fail2ban/action.d/: abuseipdb-enrich.conf  permaban-ipset.conf
etc/fail2ban/jail.d/: recidive.local  sshd-enrich.local
etc/systemd/system/: sirrmizan-ipset-restore.service
events/: activity.js  adventureRep.js
pi_bot/: __init__.py  __main__.py  bot.py  colors.py  config.py  dice_parser.py  logging_setup.py  state.py  translations.py
pi_bot/cogs/: _base.py  dice.py  help.py  settings.py
scripts/: ci_deploy.sh  pi-bot.service  restart.ps1  restart.sh  sirrmizan-abuseipdb.sh  sirrmizan-ipset-restore.sh  sirrmizan-ipset-save.sh  sirrmizan-security-anomaly.sh  sirrmizan-security-init.sh  sirrmizan-security-report.py  sirrmizan-threatfeed-update.sh  sirrmizan.service  start.ps1  start.sh  status.ps1  status.sh  stop.ps1  stop.sh
sirrmizan/: __init__.py  __main__.py  bot.py  colors.py  config.py  dice_parser.py  logging_setup.py  persistence.py  state.py  translations.py
sirrmizan/cogs/: _base.py  dice.py  help.py  settings.py
temp/: adventureRep.js
temp/adventureDB/Naema/: Storyloading.json
temporary/: adventure.js
tests/: conftest.py  test_colors.py  test_config.py  test_dice_parser.py  test_persistence.py  test_state.py  test_translations.py
