[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sirrmizan"
version = "1.0.0"
description = "Discord bot for tabletop dice rolling with per-server preferences and i18n."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "core.layer" }]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Communications :: Chat",
]
dependencies = [
    "py-cord>=2.6,<3",
    "python-dotenv>=1.0,<2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
sirrmizan = "sirrmizan.__main__:main"

[tool.setuptools.packages.find]
include = ["sirrmizan*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:audioop",
    "ignore::DeprecationWarning:discord",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "RUF"]
# E501  : line length is enforced by ``ruff format`` already.
# SIM105: try/except/pass is fine when the block is small and obvious.
# RUF059: unused tuple unpack targets are a deliberate name in tests.
ignore = ["E501", "SIM105", "RUF059"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

# Modules that wrap py-cord can't be fully typed because py-cord ships no
# stubs and uses untyped decorators. We keep strict mode on the pure-logic
# modules (parser, state, persistence, config, colors, translations) and
# disable the noise on the rest.
[[tool.mypy.overrides]]
module = [
    "sirrmizan.bot",
    "sirrmizan.__main__",
    "sirrmizan.cogs.*",
]
disable_error_code = [
    "type-arg",
    "no-untyped-call",
    "untyped-decorator",
    "no-untyped-def",
    "arg-type",
    "union-attr",
]
